static/docs/0.9.1/api/python/_sources/generated/gravitino.dto.requests.rst.txt
.. Licensed to the Apache Software Foundation (ASF) under one
   or more contributor license agreements.  See the NOTICE file
   distributed with this work for additional information
   regarding copyright ownership.  The ASF licenses this file
   to you under the Apache License, Version 2.0 (the
   "License"); you may not use this file except in compliance
   with the License.  You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing,
   software distributed under the License is distributed on an
   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
   KIND, either express or implied.  See the License for the
   specific language governing permissions and limitations
   under the License.
   
gravitino.dto.requests
======================

.. automodule:: gravitino.dto.requests
  
   
   
   

   
   
   

   
   
   

   
   
   



.. rubric:: Modules

.. autosummary::
   :toctree:
   :template: custom-module-template.rst                 
   :recursive:

   gravitino.dto.requests.catalog_create_request
   gravitino.dto.requests.catalog_set_request
   gravitino.dto.requests.catalog_update_request
   gravitino.dto.requests.catalog_updates_request
   gravitino.dto.requests.fileset_create_request
   gravitino.dto.requests.fileset_update_request
   gravitino.dto.requests.fileset_updates_request
   gravitino.dto.requests.metalake_create_request
   gravitino.dto.requests.metalake_set_request
   gravitino.dto.requests.metalake_update_request
   gravitino.dto.requests.metalake_updates_request
   gravitino.dto.requests.model_register_request
   gravitino.dto.requests.model_update_request
   gravitino.dto.requests.model_updates_request
   gravitino.dto.requests.model_version_link_request
   gravitino.dto.requests.model_version_update_request
   gravitino.dto.requests.model_version_updates_request
   gravitino.dto.requests.oauth2_client_credential_request
   gravitino.dto.requests.schema_create_request
   gravitino.dto.requests.schema_update_request
   gravitino.dto.requests.schema_updates_request

